# Simon1

./: README.md
Simonsystinfo/: CMakeLists.txt  main.cpp
